[gd_scene load_steps=7 format=3 uid="uid://bib1kc27g8522"]

[ext_resource type="Texture2D" uid="uid://cwpo3bavjbidj" path="res://sprite/food and kitchenware icons/tomato.png" id="1_056ni"]
[ext_resource type="Script" path="res://scripts/object.gd" id="1_qfylk"]
[ext_resource type="PackedScene" uid="uid://dj3wrlqt3krqt" path="res://scenes/click_space.tscn" id="3_1h7ca"]
[ext_resource type="Script" path="res://scripts/interaction.gd" id="4_7exvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeqwy"]
size = Vector2(15, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_xifxm"]
radius = 16.0

[node name="object" type="StaticBody2D"]
script = ExtResource("1_qfylk")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_056ni")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_qeqwy")

[node name="Label" parent="." instance=ExtResource("3_1h7ca")]
visible = false
offset_left = -29.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = -17.0

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("4_7exvn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_xifxm")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited"]
